@@ -23,7 +23,7 @@ ostask.unix-man.manpage=jedit.1
 # Each component must have a name, a size, and a 'fileset'. The fileset is the
 # name of a resource, relative to the root of the JAR, where the list of files
 # is stored, newline delimited
-comp.count=5
+comp.count=6
 
 comp.0.name=jEdit text editor
 comp.0.disk-size=4096
@@ -35,20 +35,25 @@ comp.1.disk-size=168
 comp.1.real-size=115
 comp.1.fileset=jedit-macros
 
-comp.2.name=Improved Windows integration (jEditLauncher)
-comp.2.disk-size=400
-comp.2.real-size=361
-comp.2.fileset=jedit-windows
-comp.2.os=Windows
+comp.2.name=API documentation (for macro and plugin development)
+comp.2.disk-size=7128
+comp.2.real-size=6478
+comp.2.fileset=jedit-api
 
-comp.3.name=Improved MacOS integration
-comp.3.disk-size=20
-comp.3.real-size=18
-comp.3.fileset=jedit-mac
-comp.3.os=MacOS
+comp.3.name=Windows desktop integration (jEditLauncher)
+comp.3.disk-size=400
+comp.3.real-size=361
+comp.3.fileset=jedit-windows
+comp.3.os=Windows
 
-comp.4.name=OS/2 start script
-comp.4.disk-size=4
-comp.4.real-size=2
-comp.4.fileset=jedit-os2
-comp.4.os=HalfAnOS
+comp.4.name=MacOS desktop integration
+comp.4.disk-size=20
+comp.4.real-size=18
+comp.4.fileset=jedit-mac
+comp.4.os=MacOS
+
+comp.5.name=OS/2 start script
+comp.5.disk-size=4
+comp.5.real-size=2
+comp.5.fileset=jedit-os2
+comp.5.os=HalfAnOS
